# cinepi-rag

./: .env.example  .gitignore  README.md  ROADMAP.md  config.example.yaml  pyproject.toml  requirements.txt
data/discord_intake/: example_threads.jsonl
data/knowledge_items/: example_approved.jsonl
data/sources/: example-cinemate-notes.md
src/cinepi_rag/: __init__.py  chunking.py  cli.py  config.py  db.py  discord_bot.py  discord_bot_stub.py  discord_export.py  extraction.py  ingestion.py  llm_gateway.py  rag.py  utils.py
src/cinepi_rag_starter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_chunking.py  test_db.py  test_discord_bot.py  test_discord_export.py  test_utils.py
